chore: use relative paths
this will allow to use reverse proxies with different base path
e.g. use nginx and serve laplace from domain.tld/laplace/

--- a/files/main.html
+++ b/files/main.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Laplace</title>
-    <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/main.css?v=0.0.5">
+    <link rel="stylesheet" href="static/bootstrap.min.css">
+    <link rel="stylesheet" href="static/main.css?v=0.0.5">
 </head>
 <body>
 
@@ -161,7 +161,7 @@
     </div>
 </div>
 
-<script src="/static/qrcode.min.js"></script>
-<script src="/static/main.js?v=0.0.5"></script>
+<script src="static/qrcode.min.js"></script>
+<script src="static/main.js?v=0.0.5"></script>
 </body>
 </html>
