chore: use relative paths
this will allow to use reverse proxies with different base path
e.g. use nginx and serve laplace from domain.tld/laplace/

--- a/files/main.html
+++ b/files/main.html
@@ -161,7 +161,7 @@
     </div>
 </div>
 
-<script src="/static/qrcode.min.js"></script>
-<script src="/static/main.js?v=0.0.5"></script>
+<script src="static/qrcode.min.js"></script>
+<script src="static/main.js?v=0.0.5"></script>
 </body>
 </html>
